Updated JoystickPaneTest to support increasing and decreasing the nearest neighbors search using the joystick control. Stubbed initial cut at image FFT Test app. Added more Carl-B