@@ -11,6 +11,7 @@ import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
 import java.net.URL;
+import java.net.URI;
 import java.text.DecimalFormat;
 
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -26,6 +27,7 @@ public class ImageTest {
 
     /**
      * Test of doCommonsPca method, of class AnalysisUtils.
+     * @throws java.net.MalformedURLException
      */
     //@Test
     public void scrapeFlags() throws MalformedURLException, IOException {
@@ -37,13 +39,10 @@ public class ImageTest {
         df.setMaximumIntegerDigits(2);
         for (int i = 0; i < 51; i++) {
             String imageName = "UNST01" + df.format(i);
-            URL url = new URL("http://www.flags.net/images/largeflags/" + imageName + ".GIF");
+            URL url = URI.create("http://www.flags.net/images/largeflags/" + imageName + ".GIF").toURL();
             BufferedImage image = ImageIO.read(url);
-            ImageIO.write(image, "png", new File("c:/dev/trinity/imagery/" + imageName + ".PNG"));
-
+            ImageIO.write(image, "png", new File("/imagery/" + imageName + ".PNG"));
         }
-
         assertTrue(true);
     }
-
 }
